stopping jumping in carousel
I deleted the height of the images from html. added to css 100% width
450px height and hidden overflow. That way the page doesn’t jump when
the image changes

--- a/style.css
+++ b/style.css
@@ -48,3 +48,13 @@ h3 {
   text-decoration:none;
   color: rgba(209, 60, 60, 1);
 }
+.carousel-inner {
+  height: 450px;
+  width: 100%;
+  overflow: hidden;
+  position: : center;}
+.item {
+  height: 450px;
+  width: 100%;
+  overflow: hidden;
+  position: : center;}
